# BeanNetworkTester

./: .gitattributes  .gitignore  BeanNetworkTester.spec  CHANGELOG-INTERNAL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.pl.md  SECURITY.md  THIRD-PARTY-NOTICES.md  bean_network_tester.py  build.py  pyproject.toml  requirements-dev.txt  requirements.txt  smoke_gui.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
beantester/: __init__.py  __main__.py  appinfo.py  cli.py  clilog.py  core.py  crashlog.py  driver.py  engine.py  exitcodes.py  fields.py  filters.py  i18n.py  jsonfile.py  legal.py  matchers.py  paths.py  portmap.py  presets.py  processes.py  repro.py  scenario.py  scenario_runner.py  settings.py  socketwatch.py  summary.py  synthetic.py  target_resolver.py  targeting.py  utils.py  validators.py  views.py  winenv.py
beantester/gui/: __init__.py  accordion.py  app.py  chart.py  dialogs.py  form.py  icon.py  labels.py  model_worker.py  prefs.py  profiles.py  rates.py  scaling.py  scrollable.py  theme.py  tooltip.py  ui_state.py  wheel.py  windows.py
beantester/gui/pages/: __init__.py  conns.py  control.py  stats.py
beantester/gui/panels/: __init__.py  about.py  event_log.py  settings.py
beantester/gui/widgets/: __init__.py  sortable_tree.py
lang/: en.json  pl.json
scenarios/: blocked-endpoint.json  cafe-wifi.json  congested-vpn.json  failing-dns.json  mobile-lte-to-3g.json  overloaded-game-server.json  upload-drop-midway.json
tests/: conftest.py  fake_tk.py  fakes.py  gui_harness.py  test_audit_fixes.py  test_bandwidth_buffer.py  test_cli.py  test_cli_docs.py  test_cli_fuzz.py  test_cli_runtime.py  test_clilog.py  test_code_hygiene.py  test_concurrency_chaos.py  test_conns_columns.py  test_conns_export.py  test_core.py  test_core_properties.py  test_crashlog.py  test_dialogs.py  test_driver_windows.py  test_engine.py  test_failsafe.py  test_field_registry.py  test_gui_helpers.py  test_gui_layout.py  test_gui_release_fixes.py  test_gui_smoke.py  test_gui_stack_chaos.py  test_gui_state.py  test_hot_path.py  test_i18n.py  test_jsonfile.py  test_launcher_compat.py  test_layering.py  test_matchers.py  test_matchers_properties.py  test_model_worker.py  test_ondisk_formats.py  test_packet_mutation_properties.py  test_passthrough.py  (+20 more)
tools/: ci_gui_render.py  downloads.py
